Integración de API para los productos

--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="stylesheet" href="../css/paginaPrincipal.css" />
   <script src="https://kit.fontawesome.com/fad9a14bf1.js" crossorigin="anonymous"></script> <!-- Para íconos -->
-  <script src="../js/scripts.js" defer></script> 
-  <script src="../js/paginaPrincipal.js" defer></script> 
+  <script src="../js/paginaPrincipal.js" defer type="module"></script> 
 </head>
 <body>
   <div class="container">
@@ -87,90 +86,7 @@
 
         <!-- GRID DE PRODUCTOS -->
         <section class="productos-grid">
-          <!-- Productos simulados -->
-          <!-- Puedes duplicar estas tarjetas para probar la paginación -->
-          <div class="producto">
-            <a href="../html/productoDetalle.html">
-            <img src="../imgs/IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-            </a>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
-          <div class="producto">
-            <img src="IMG_4104.JPG" alt="Producto">
-            <h3>Mouse Gamer RGB</h3>
-            <p>$15.999</p>
-          </div>
+
         </section>
 
         <!-- PAGINACIÓN -->
