--- a/html/productoDetalle.html
+++ b/html/productoDetalle.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="stylesheet" href="../css/productoDetalle.css" />
   <script src="https://kit.fontawesome.com/fad9a14bf1.js" crossorigin="anonymous"></script> <!-- Para íconos -->
-  <script src="../js/scripts.js" defer></script> 
-  <script src="../js/productoDetalle.js" defer></script> 
+  <script src="../js/productoDetalle.js" defer type="module"></script> 
 </head>
 <body>
   <div class="container">
@@ -43,34 +42,30 @@
     <main class="main">
       <section class="producto-grid">
           <section class="imagenes">
-            <img id="main-image" src="../imgs/IMG_4104.JPG" alt="Cortadora de pelo / Clipper">
+            <img id="main-image" src="" alt="">
                 
             <div class="miniaturas">
-              <img class="thumb" src="../imgs/IMG_4104.JPG" alt="Vista 1">
-              <img class="thumb" src="../Imagenes/wahl-pro-basic-2.webp" alt="Vista 2">
-              <img class="thumb" src="../Imagenes/wahl-pro-basic-3.webp" alt="Vista 3">
+              <img class="thumb" id="thumb1" src="" alt="">
+              <img class="thumb" id="thumb2" src="" alt="">
+              <img class="thumb" id="thumb3" src="" alt="">
             </div>
          </section>
         
          <section class="detalle-producto">
-            <h1>Cortadora de pelo / Clipper - WAHL PRO BASIC |<strong class="calificacion"> 4.5 ★</strong></h1>
-            <p class="precio">$130,000.00</p>
+            <h1 id="titulo" class="titulo"></h1>
+            <h2 class="calificacion"> 4.5 ★</h2>
             <br>
-            <h2>Descripción</h2>
-            <p>Wahl empresa líder en la industria por haber inventado la primera cortadora de pelo eléctrica, te ofrece productos innovadores y de excelente calidad, respaldados por su estándar global de integridad, valor y eficiencia.</p>
+            <h3>Descripción</h3>
+            <p id="descripcion"></p>
             <br>
-            <h2>Caracteristicas</h2>
+            <h3>Opciones</h3>
             <br>    
-            <ul class="caracteristicas">
-              <li>Voltaje: 220V</li>
-              <li>Posee cabezales lavables.</li>
-              <li>Es silenciosa</li>
-              <li>Viene con 4 peines</li>
-              <li>Corta hasta 1.3 cm.</li>
-              <li>Incluye cepillo limpiador</li>
-              <li>Incluye peine</li>
-              <li>Incluye aceite para cortadora</il>
-              </ul>
+            <ul id="lista-tipos" class="opciones">
+
+            </ul>
+            <br>
+            <br>
+            <a id="link-sitio-web" href="">Sitio web del fabricante</a>
             </div>
           </section>
         </section> 
