imagenes de ia para el banner (provisional)

--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
       <!-- CARRUSEL DE IMÁGENES -->
       <section class="banner">
         <div class="banner-imagen">
-          <img src="../imgs/IMG_4104.JPG"Imagen principal" id="imagen-banner">
+          <img src="" id="imagen-banner">
         </div>
       </section>
       <div class="puntos-banner">
