optimización responsive de productoDetalle

--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
       <!-- CARRUSEL DE IMÁGENES -->
       <section class="banner">
         <div class="banner-imagen">
-          <img src="" id="imagen-banner">
+          <img src="../imgs/descuentosNotebooks.png" id="imagen-banner">
         </div>
       </section>
       <div class="puntos-banner">
