ejercicos en clase de local store y API

--- a/html/productoDetalle.html
+++ b/html/productoDetalle.html
@@ -64,9 +64,11 @@
 
             </ul>
             <br>
-            <br>
             <a id="link-sitio-web" href="">Sitio web del fabricante</a>
-            </div>
+            <br>
+            <!-- EJERCICIO LOCAL STORAGE -->
+            <button id="favorito">Añadir a favoritos</button>
+            <p id="favoritos-actuales"></p>
           </section>
       </section> 
         <section class="comentarios">
